force-app/main/default/objects/PUD_Booking__c/PUD_Booking__c.object-meta.xml
<CustomObject>
    <label>Booking</label>
    <nameField>
        <displayFormat>BK-{000000}</displayFormat>
        <label>Booking Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>