force-app/main/default/objects/PUD_Booking__c/fields/Booking_Location__c.field-meta.xml
<CustomField>
    <fullName>Booking_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Only Locations with an address are available for selection. 

Please navigate to the Location screen to create a Location and set it&apos;s address.</inlineHelpText>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Selected Booking Location does not have address. Please select a valid booking location with address</errorMessage>
        <filterItems>
            <field>PUD_Booking_Location__c.Street__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Only Booking Locations with an address are available for selection. 

Please navigate to the Booking Location screen to create a Booking Location and set it&apos;s address.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PUD_Booking_Location__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>