force-app/main/default/objects/PUD_Booking__c/fields/Booking_Location_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Booking_Location_Latitude__c</fullName>
    <formula>Booking_Location__r.Geo__Latitude__s</formula>
    <label>Location Latitude</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>