force-app/main/default/objects/PUD_Booking__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Common address field on Booking. Required for Search. Set via:
-trigger on Booking (update of Booking Location)
-trigger on Booking Location (update of address)
-via API for bookings without location</description>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>