force-app/main/default/objects/PUD_Booking__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer to collect from / deliver to, depending on the booking record type.</description>
    <inlineHelpText>The customer to collect from / deliver to, depending on the booking record type.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>