force-app/main/default/objects/PUD_Booking__c/fields/Customer_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Post_Code__c</fullName>
    <formula>Customer__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Post Code</label>
    <type>Text</type>
</CustomField>