force-app/main/default/objects/PUD_Booking__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Requested date for the booking.  Only applies to an adhoc booking.</description>
    <inlineHelpText>Requested date for the booking.  Only applies to an adhoc booking.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>