force-app/main/default/objects/PUD_Booking__c/fields/Dwell_Time_Planned__c.field-meta.xml
<CustomField>
    <fullName>Dwell_Time_Planned__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The planned dwell time at the site in minutes</description>
    <inlineHelpText>The planned dwell time at the site in minutes</inlineHelpText>
    <label>Dwell Time (mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>