force-app/main/default/objects/PUD_Booking__c/fields/Earliest_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start_Time__c</fullName>
    <label>Earliest Start Time</label>
    <type>Time</type>
</CustomField>