force-app/main/default/objects/PUD_Booking__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date from which a permanent booking becomes active</description>
    <inlineHelpText>Date from which a permanent booking becomes active</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>