force-app/main/default/objects/PUD_Booking__c/fields/Effective_Date_Calc__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Calc__c</fullName>
    <description>Calculated effective date to support deriving date from parent etc</description>
    <formula>IF(ISBLANK(Parent_Booking__c),Effective_Date__c,Parent_Booking__r.Effective_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date Calc</label>
    <type>Date</type>
</CustomField>