force-app/main/default/objects/PUD_Booking__c/fields/Empty_Pallets__c.field-meta.xml
<CustomField>
    <fullName>Empty_Pallets__c</fullName>
    <description>DEPRECATED. DO NO USE. Number of empty Pallets for pickup/delivery booking, used by Metro Transport fleet.</description>
    <label>Empty Pallets (DEPRECATED)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>