force-app/main/default/objects/PUD_Booking__c/fields/Empty_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Empty_Trailer__c</fullName>
    <description>DEPRECATED. DO NO USE. 
Number of empty Trailer for pickup/delivery booking, used by Metro Transport fleet.</description>
    <label>Empty Trailer(DEPRECATED)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>