force-app/main/default/objects/PUD_Booking__c/fields/Expiry_Date_Calc__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Calc__c</fullName>
    <description>Calculated expiry date to support deriving date from parent etc</description>
    <formula>IF(ISBLANK(Parent_Booking__c),Expiry_Date__c,Parent_Booking__r.Expiry_Date__c)</formula>
    <label>Expiry Date Calc</label>
    <type>Date</type>
</CustomField>