force-app/main/default/objects/PUD_Booking__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>