force-app/main/default/objects/PUD_Booking__c/fields/Full_CardULD__c.field-meta.xml
<CustomField>
    <fullName>Full_CardULD__c</fullName>
    <description>DEPRECATED. DO NO USE. Number of full Cardboard for pickup/delivery booking, used by Metro Transport fleet.</description>
    <label>Full CardULD(DEPRECATED)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>