force-app/main/default/objects/PUD_Booking__c/fields/Latest_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_End_Time__c</fullName>
    <label>Latest End Time</label>
    <type>Time</type>
</CustomField>