force-app/main/default/objects/PUD_Booking__c/fields/LEGACY_ID__c.field-meta.xml
<CustomField>
    <fullName>LEGACY_ID__c</fullName>
    <description>The SAP customer Id. This is for customer bookings only</description>
    <inlineHelpText>The SAP customer Id</inlineHelpText>
    <label>Customer Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>