force-app/main/default/objects/PUD_Booking__c/fields/Location_Key_Number__c.field-meta.xml
<CustomField>
    <fullName>Location_Key_Number__c</fullName>
    <formula>Booking_Location__r.Key_Number__c</formula>
    <label>Location Key Number</label>
    <type>Text</type>
</CustomField>