force-app/main/default/objects/PUD_Booking__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The network to collect from / deliver to, depending on the booking record type.</description>
    <inlineHelpText>The network to collect from / deliver to, depending on the booking record type.</inlineHelpText>
    <label>Network</label>
    <referenceTo>Network__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>