force-app/main/default/objects/PUD_Booking__c/fields/Network_City__c.field-meta.xml
<CustomField>
    <fullName>Network_City__c</fullName>
    <formula>Network__r.ORG_UNIT_ADDR_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Network City</label>
    <type>Text</type>
</CustomField>