force-app/main/default/objects/PUD_Booking__c/fields/Parent_Requested_Days__c.field-meta.xml
<CustomField>
    <fullName>Parent_Requested_Days__c</fullName>
    <formula>IF(Parent_Booking__r.Monday__c, &quot;Mon &quot;,&quot;&quot;) + 
IF(Parent_Booking__r.Tuesday__c, &quot;Tue &quot;,&quot;&quot;) + 
IF(Parent_Booking__r.Wednesday__c, &quot;Wed &quot;,&quot;&quot;) + 
IF(Parent_Booking__r.Thursday__c, &quot;Thu &quot;,&quot;&quot;) + 
IF(Parent_Booking__r.Friday__c, &quot;Fri &quot;,&quot;&quot;) + 
IF(Parent_Booking__r.Saturday__c, &quot;Sat &quot;,&quot;&quot;) + 
IF(Parent_Booking__r.Sunday__c, &quot;Sun &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Requested Days</label>
    <type>Text</type>
</CustomField>