force-app/main/default/objects/PUD_Booking__c/fields/Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Post_Code__c</fullName>
    <description>Common address field on Booking. Required for Search. Set via:
-trigger on Booking (update of Booking Location)
-trigger on Booking Location (update of address)
-via API for bookings without location</description>
    <label>Post Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>