force-app/main/default/objects/PUD_Booking__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <description>Original TIS name of the route that could not be found in the Route object</description>
    <inlineHelpText>Original TIS name of the route that could not be found in the Route object</inlineHelpText>
    <label>TIS Route Not Found</label>
    <length>10</length>
    <type>Text</type>
</CustomField>