force-app/main/default/objects/PUD_Booking__c/fields/Route_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Route_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The name of the route the booking must be performed within.</description>
    <inlineHelpText>The name of the route the booking must be performed within.</inlineHelpText>
    <label>Route</label>
    <referenceTo>PUD_Route__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>