force-app/main/default/objects/PUD_Booking__c/fields/Side_Of_Street_Code__c.field-meta.xml
<CustomField>
    <fullName>Side_Of_Street_Code__c</fullName>
    <description>Indicates whether a pickup/delivery can be made from either side of the street, or the same side as the location. Possible values as returned by AME are &apos;SAME&apos;, &apos;ANY&apos; or &apos;UNKNOWN&apos;.</description>
    <inlineHelpText>Indicates whether the site can be accessed from either side or same side of street as the location.</inlineHelpText>
    <label>Side Of Street Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>