force-app/main/default/objects/PUD_Booking__c/fields/Source_Street__c.field-meta.xml
<CustomField>
    <fullName>Source_Street__c</fullName>
    <description>Address field on Booking which gets sent over from MPB.
Which will further be used to get geo-cordinates from AME,</description>
    <label>Source Street</label>
    <type>TextArea</type>
</CustomField>