force-app/main/default/objects/PUD_Booking__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The start time for the job</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>