force-app/main/default/objects/PUD_Booking__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Common address field on Booking. Required for Search. Set via:
-trigger on Booking (update of Booking Location)
-trigger on Booking Location (update of address)
-via API for bookings without location</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>