force-app/main/default/objects/PUD_Booking__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
 AND(DATEVALUE(NOW())&gt;= Effective_Date__c,OR(ISBLANK(Expiry_Date__c),DATEVALUE(NOW())&lt;= Expiry_Date__c )),&apos;Active&apos;,
 IF(DATEVALUE(NOW())&gt;Expiry_Date__c,&apos;Expired&apos;,
 &apos;Planned&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>