force-app/main/default/objects/PUD_Booking__c/recordTypes/AP_Adhoc_Pickup.recordType-meta.xml
<RecordType>
    <fullName>AP_Adhoc_Pickup</fullName>
    <active>true</active>
    <description>Adhoc pickup, standalone delivery, or pickup &amp; delivery booking</description>
    <label>Adhoc Pickup/Delivery</label>
</RecordType>