force-app/main/default/objects/PUD_Booking__c/recordTypes/AP_Dependant_Delivery.recordType-meta.xml
<RecordType>
    <fullName>AP_Dependant_Delivery</fullName>
    <active>true</active>
    <description>Delivery booking must have a pickup on the same route</description>
    <label>Dependent Delivery</label>
</RecordType>