force-app/main/default/objects/PUD_Booking__c/recordTypes/AP_Permanent_Pickup.recordType-meta.xml
<RecordType>
    <fullName>AP_Permanent_Pickup</fullName>
    <active>true</active>
    <description>Permanent pickup, standalone delivery, or pickup &amp; delivery booking</description>
    <label>Permanent Pickup/Delivery</label>
</RecordType>