force-app/main/default/objects/PUD_Booking__c/recordTypes/MPB_Pickup.recordType-meta.xml
<RecordType>
    <fullName>MPB_Pickup</fullName>
    <active>true</active>
    <description>My Post Business pickup booking</description>
    <label>MPB Pickup</label>
</RecordType>