force-app/main/default/objects/PUD_Booking__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <description>This record type will be associated to all non-booking types</description>
    <label>Other</label>
</RecordType>