force-app/main/default/objects/PUD_Booking__c/validationRules/Adhoc_Expiry_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Adhoc_Expiry_Date_Mandatory</fullName>
    <active>true</active>
    <description>This validation rule gets fired if Expiry date is not filled in for Adhoc Pickup Booking records.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;AP_Adhoc_Pickup&apos;, 
ISBLANK(Expiry_Date__c ))</errorConditionFormula>
    <errorMessage>Expiry Date is mandatory for Adhoc Pickup Bookings.</errorMessage>
</ValidationRule>