force-app/main/default/objects/PUD_Booking__c/validationRules/article_count_should_be_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>article_count_should_be_numeric</fullName>
    <active>true</active>
    <description>Article count should be a numeric number</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Article_Count__c)),
NOT(ISNUMBER(Article_Count__c))
)</errorConditionFormula>
    <errorMessage>Article count should be a numeric number. Please correct before saving the record.</errorMessage>
</ValidationRule>