force-app/main/default/objects/PUD_Booking__c/validationRules/Booking_Location_Must_Have_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Location_Must_Have_Address</fullName>
    <active>true</active>
    <description>If a booking location is selected the booking location must have an address set</description>
    <errorConditionFormula>AND( NOT(ISBLANK( Booking_Location__c )),
     ISBLANK( Booking_Location__r.Street__c )
)</errorConditionFormula>
    <errorMessage>The address of the Location is not complete, so can not be used. 

Please navigate to the Location selected, populate the address, and reassign.</errorMessage>
</ValidationRule>