force-app/main/default/objects/PUD_Booking__c/validationRules/Booking_Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Location_Required</fullName>
    <active>true</active>
    <description>A booking location is required on AP pickup and delivery bookings</description>
    <errorConditionFormula>AND( 
 OR(RecordType.DeveloperName = &apos;AP_Adhoc_Pickup&apos;,
    RecordType.DeveloperName = &apos;AP_Permanent_Pickup&apos;,
    RecordType.DeveloperName = &apos;AP_Delivery&apos;),
 ISBLANK(Booking_Location__c)
)</errorConditionFormula>
    <errorMessage>Booking Location is a required field on pickup and delivery bookings.</errorMessage>
</ValidationRule>