force-app/main/default/objects/PUD_Booking__c/validationRules/Depot_field_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Depot_field_cannot_be_blank</fullName>
    <active>true</active>
    <description>The depot field is mandatory for all AP bookings except Dependent Delivery</description>
    <errorConditionFormula>AND( RecordType.DeveloperName &lt;&gt; &apos;AP_Dependant_Delivery&apos;,
     ISBLANK(Depot__c)
)</errorConditionFormula>
    <errorMessage>Depot is mandatory.</errorMessage>
</ValidationRule>