force-app/main/default/objects/PUD_Booking__c/validationRules/Effective_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_Date_Required</fullName>
    <active>true</active>
    <description>Effective date is a required field on pickup bookings</description>
    <errorConditionFormula>AND(
 OR(RecordType.DeveloperName = &apos;AP_Adhoc_Pickup&apos;, 
    RecordType.DeveloperName = &apos;AP_Permanent_Pickup&apos;),
   ISNULL(Effective_Date__c) 
)</errorConditionFormula>
    <errorMessage>Effective Date is required on pickup bookings.</errorMessage>
</ValidationRule>