force-app/main/default/objects/PUD_Booking__c/validationRules/End_Time_not_less_than_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_not_less_than_Start_Time</fullName>
    <active>true</active>
    <description>This validation rule prevents user from entering end time less than Start Time.</description>
    <errorConditionFormula>Latest_End_Time__c &lt; Earliest_Start_Time__c</errorConditionFormula>
    <errorMessage>The Latest End Time cannot be prior to Earliest Start Time.</errorMessage>
</ValidationRule>