force-app/main/default/objects/PUD_Booking__c/validationRules/Expiry_Date_Not_Before_Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date_Not_Before_Effective_Date</fullName>
    <active>true</active>
    <description>Expiry date must be equal or greater that effective date</description>
    <errorConditionFormula>Expiry_Date__c &lt;  Effective_Date__c</errorConditionFormula>
    <errorMessage>The Expiry Date can not be prior to the Effective Date.</errorMessage>
</ValidationRule>