force-app/main/default/objects/PUD_Booking__c/validationRules/MPB_Customer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MPB_Customer_Required</fullName>
    <active>true</active>
    <description>Customer is a required field on My Post Business pickup bookings.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &apos;MPB_Pickup&apos;,
     ISBLANK( Customer__c )
)</errorConditionFormula>
    <errorMessage>Customer is a required field on My Post Business pickup bookings.</errorMessage>
</ValidationRule>