force-app/main/default/objects/PUD_Booking__c/validationRules/No_Meal_Breaks_At_Customer_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Meal_Breaks_At_Customer_Location</fullName>
    <active>false</active>
    <description>Booking of &apos;Other&apos; record types that are Meal Breaks can be linked only to non-customer locations.</description>
    <errorConditionFormula>AND(  ISPICKVAL(Booking_Type__c, &apos;Meal Break&apos;),  RecordType.DeveloperName = &apos;Other&apos;,  Booking_Location__r.RecordType.DeveloperName = &apos;AP_Customer&apos; )</errorConditionFormula>
    <errorDisplayField>Booking_Location__c</errorDisplayField>
    <errorMessage>Meal Breaks cannot be at a customer location.</errorMessage>
</ValidationRule>