force-app/main/default/objects/PUD_Booking__c/validationRules/Parent_Booking_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Booking_Required</fullName>
    <active>true</active>
    <description>Parent booking is required on delivery bookings</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;AP_Dependant_Delivery&apos;,
    ISBLANK( Parent_Booking__c )
)</errorConditionFormula>
    <errorMessage>Delivery bookings must have a parent pickup booking assigned.</errorMessage>
</ValidationRule>