force-app/main/default/objects/PUD_Booking__c/validationRules/Prevent_Booking_creation_upon_StopCredit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Booking_creation_upon_StopCredit</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; Booking_Location__r.Stop_Credit__c = true</errorConditionFormula>
    <errorMessage>Booking cannot be created for this Location due to Credit Issues. Please contact your Supervisor.</errorMessage>
</ValidationRule>