force-app/main/default/objects/PUD_Booking__c/validationRules/Restrict_PhoneNumber_length.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_PhoneNumber_length</fullName>
    <active>true</active>
    <description>Restrict the length of the field to 25 as the API interface to MobileSTAR cannot accept values greater than 25 characters.</description>
    <errorConditionFormula>LEN(Contact_Phone_Number__c) &gt; 25</errorConditionFormula>
    <errorMessage>Limit exceeded.Maximum characters is limited to 25 .</errorMessage>
</ValidationRule>