force-app/main/default/objects/PUD_Booking__c/listViews/Adelaide_Bookings_TODAY.listView-meta.xml
<ListView>
    <fullName>Adelaide_Bookings_TODAY</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>Route_Lookup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Effective_Date__c</columns>
    <columns>Booking_Comments__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Ade</value>
    </filters>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Adelaide Bookings - TODAY</label>
</ListView>