force-app/main/default/objects/PUD_Booking__c/listViews/Adelaide_Bookings_YESTERDAY.listView-meta.xml
<ListView>
    <fullName>Adelaide_Bookings_YESTERDAY</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>Route_Lookup__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Depot__c</field>
        <operation>startsWith</operation>
        <value>Ade</value>
    </filters>
    <filters>
        <field>Effective_Date__c</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>PUD_Booking__c.Other</value>
    </filters>
    <label>Adelaide Bookings - YESTERDAY</label>
</ListView>