force-app/main/default/objects/PUD_Booking__c/listViews/Adelaide_MPB_Bookings_Today.listView-meta.xml
<ListView>
    <fullName>Adelaide_MPB_Bookings_Today</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9 OR 10)</booleanFilter>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>Route_Lookup__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Effective_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Depot__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PUD_Booking__c.MPB_Pickup</value>
    </filters>
    <filters>
        <field>Effective_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5163,5164,5165,5166,5167,5168,5169,5170,5171</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5000,5006,5007,5008,5009,5010,5011,5012,5013,5014,5015,5016,5017</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5018,5019,5020,5021,5022,5023,5024,5025,5031,5032,5033,5034,5035</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5037,5038,5039,5040,5041,5042,5043,5044,5045,5046,5047,5048,5049</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5050,5051,5052,5061,5062,5063,5064,5065,5066,5067,5068,5069,5070</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5072,5073,5074,5075,5076,5081,5082,5083,5084,5085,5086,5087,5088</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5089,5090,5091,5092,5093,5094,5095,5096,5097,5098,5106,5107,5108</value>
    </filters>
    <filters>
        <field>Post_Code__c</field>
        <operation>contains</operation>
        <value>5109,5111,5112,5113,5114,5125,5126,5127,5158,5159,5160,5161,5162</value>
    </filters>
    <label>Adelaide - MPB Bookings Today</label>
</ListView>